# ionic_sdk_python

./: LICENSE.md  README.md  RELEASES.md  USAGE.md  files.gen  gen.yaml  openapi.json  pylintrc  pyproject.toml  setup.py
.github/workflows/: openapi.yml  speakeasy_sdk_generation.yml
docs/models/components/: amountwithcurrency.md  clientdetails.md  enrichedproduct.md  error.md  extension.md  extensionimages.md  extensionlinks.md  extensionobject.md  extensions.md  link.md  message.md  messagerole.md  messagetype.md  pet.md  pricewithcurrency.md  product.md  productdetails.md  productidentifiers.md  productlinkrequest.md  productlinkresponse.md  query.md  queryapirequest.md  queryapiresponse.md  querydetails.md  queryresult.md  security.md  session.md  shippingattribute.md  taggedlink.md  userdetails.md
docs/models/operations/: createpetsresponse.md  createproductlinkresponse.md  createproductlinksecurity.md  listpetsrequest.md  listpetsresponse.md  queryresponse.md  querysecurity.md  showpetbyidrequest.md  showpetbyidresponse.md
docs/sdks/ionic/: README.md
docs/sdks/ionicapi/: README.md
docs/sdks/pets/: README.md
ionic_sdk_python/: __init__.py  ionic.py
src/ionic/: pets.py  sdk.py  sdkconfiguration.py
src/ionic/models/components/: __init__.py  amountwithcurrency.py  clientdetails.py  enrichedproduct.py  error.py  extension.py  extensionimages.py  extensionlinks.py  extensionobject.py  extensions.py  link.py  message.py  messagerole.py  messagetype.py  pet.py  pricewithcurrency.py  product.py  productdetails.py  (+14 more)
src/ionic_api/: sdk.py  sdkconfiguration.py
(+17 files in other folders)
